# tokensaver

./: .gitignore  README.md  pyproject.toml
src/tokensaver/: __init__.py  __main__.py  models.py  server.py
src/tokensaver/tools/: advisor.py  cache.py  compress.py  counter.py  extractor.py  optimizer.py  pruner.py  summarizer.py
src/tokensaver/utils/: text_utils.py  token_utils.py
tests/: conftest.py  test_advisor.py  test_cache.py  test_compress.py  test_counter.py  test_optimizer.py  test_pruner.py  test_summarizer.py
